styles/components/projectCard.scss
.project-card {
  background-color: $white-clr;
  border-top-right-radius: 12px;
  border-top-left-radius: 12px;
  .project-img {
    height: 200px;
    width: 100%;
    background-color: $placeholder;
    overflow: hidden;
    border-top-right-radius: 12px;
    border-top-left-radius: 12px;
    position: relative;
    img{
      object-fit: cover;
    }
  }
  .project-content {
    padding: 1rem;
    text-align: left;
    .project-name-wrap {
      display: flex;
      align-items: center;
      justify-content: space-between;
      margin-bottom: 1rem;
      @include responsive($mob-max) {
        flex-wrap: wrap;
      }
      .project-name,.project-price{
        @include text-attributes(1,2.4rem,$text-clr-primary,600,0.8rem);
        text-overflow: ellipsis;
        white-space: nowrap;
        max-width: 49%;
        @include responsive($mob-max) {
          max-width: 100%;
        }
      }
      .project-name {
        margin-right: 1rem;
      }
      .project-price {
        color: $accent-clr-1;
      }
    }
    .project-provider {
      @include text-attributes(1,1.6rem,$placeholder,400,0.6rem);
      max-width: 100%;
      letter-spacing: 0.01em;
      margin-bottom: 1rem;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
    .project-address {
      .project-text {
        @include text-attributes(1,1.3rem,$placeholder,400,0.4rem);
        max-width: calc(100% - 20px - 0.7rem);
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }
  }
  .project-feat {
    padding: 1rem 1.5rem;
    border-top: 1px solid $grey;
    display: flex;
    align-items: center;
    justify-content: space-between;
    .project-feat-left {
      display: flex;
      align-items: center;
      flex-wrap: wrap;
    }
    .project-feat-icon {
      margin-right: 1.2rem;
    }
  }
  .project-save {
    word-break: normal;
    position: relative;
    z-index: 5;
  }
  svg {
    margin-right: .7rem;
    width: 20px;
    height: 20px;
  }
  @include add-transition(all,$transition-timing)
}

.project-card {
  &.project-horizontal {
      display: flex;
      border-radius: 0;
      border-bottom-left-radius: 12px;
      border-top-left-radius: 12px;
      .project-img {
        width: 20rem;
        height: auto;
        border-radius: 0;
        border-bottom-left-radius: 12px;
        border-top-left-radius: 12px;
      }
      .project-wrap {
        display: flex;
        flex-direction: column;
        flex: 1;
        overflow: hidden;
        border: 1px solid #E8E8E8;
        .project-content {
          flex: 1;
          padding: 2rem 1rem;
        }
      }
  }
}

.project-res {
  position: relative;
  .project-overlay {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: 5;
    &:hover {
      ~ .project-card {
        @include vendor(box-shadow,$box-shadow);
        svg:not(.project-address svg):not(.project-save svg) path {
          fill: $accent-clr-2;
          fill-opacity: 0.7;
        }
      }
    }
  }
}

